# academic

1 year/: ДЗ 1 (отчет).docx  ДЗ 2 (отчет).docx
1 year/qt_png/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
3 year/: cipolla_lehmer_cube_2.ipynb
3 year/operting system/1/: client.c  head.h  server.c
3 year/operting system/2/: CMakeLists.txt  client_1.c  client_2.c  holder.h  readme.txt  server.c
3 year/operting system/3/: client.c  queue.h  server.c
3 year/programming methods/: ЛАБА 1 (отчет).docx  ЛАБА 4 (отчет).docx  ЛАБА 5(отчет).docx
3 year/programming methods/1/: main.cpp  sort_class.cpp  sort_class.hpp
3 year/statistic/: binomallll.py
5 year/parallel/: отчет_параллель_1.odt
